Again, changed the line height of the 'Services' link in the navbar; I'm convinced the dancing script makes it look like its uneven compared to the other links; changed some styling for the portfolio page; finally added the description to the 'Corporate Rebranding' Jumbotron; also fixed the border-radii of the jumbotrons and image for Rebranding, and 'Corporate Re-branding' to 'Corporate Rebranding' because 'Rebranding' is actually one word.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -62,7 +62,7 @@
                     //"Services" Link
                             #servicesNav{
                                 position: relative;
-                                bottom: 1px;
+                                bottom: 2.8px;
                             }
 
                     //"Collective" Link
@@ -308,12 +308,18 @@
                                 border-bottom:solid;
                                 border-top:solid;
                                 background-color: white;
+                                border-radius: 0;
+                            }
+                            .lead{
+                                text-align: justify;
                             }
                             .display-4{
                                 font-family:  'Josefin Sans', sans-serif;
                             }
                             .card-img-top {
                                 border:solid;
+                                border-top-left-radius: 0;
+                                border-top-right-radius: 0;
                             }
 
                             .myarrow {
